--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -10,5 +10,7 @@
   <%= @listing.description %>
 </p>
 
+<%= link_to 'Edit', edit_listing_path(@listing) %>
+
 
 <%= link_to 'Listing List', listings_path %>
