--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -23,7 +23,10 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </p>
-  
+  <p>
+    <%= f.label :tag_list, "Tags (separated by commas)" %><br/>
+    <%= f.text_field :tag_list %>
+  </p>
   <p>
     <%= f.submit %>
   </p>
