--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -6,6 +6,7 @@
     <th>Text</th>
     <th>UserID</th>
     <th>Email</th>
+    <th>Tags</th>
     <th colspan="2"></th>
   </tr>
  
@@ -16,22 +17,22 @@
       <td><%= listing.description %></td>
       <td><%= listing.user_id %></td>
       <td><%= listing.user.email %></td>
+      <td><%= raw listing.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %></td>
       <td><%= link_to 'Show', listing_path(listing) %></td>
       <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
     </tr>
 
-    Tags: <%= raw listing.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
+
   <% end %>
 </table>
-
+asfsfs
 
 <div id="tag_cloud">
   <% tag_cloud Listing.tag_counts, %w[s m l] do |tag, css_class| %>
     <%= link_to tag.name, tag_path(tag.name), class: css_class %>
   <% end %>
 </div>
-...
-Tags: <%= raw article.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
+
 
 
 <%= link_to 'New listing', new_listing_path %>
