--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require jquery-ui/datepicker
  */
 
 .main-text
@@ -56,5 +57,71 @@
 display: block;
     margin: auto;
  width: 100%;
+}
+
+.text-livethere {
+    font-size: 60px;
+    font-weight: 700;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.text-subhead {
+    margin-bottom: 24px;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.avatar-round{
+	width: 50px;
+	border-radius: 50px;
+}
+
+.cardbg{
+	top: 0;
+	align-content: center;  
+}
+
+.card{
+	width: 300px;
+}
+
+.cardlabel{
+	text-align: left;
+	padding-left: 10px;
 
 }
+
+.cardprice{
+	position: absolute;
+	top:130px;
+	background-color: rgba(45,45,45,0.9);
+	width: 50px;
+}
+
+.cardpricetext{
+
+	padding-left: -20px;
+	padding-right: 50px;
+}
+
+#navav{
+    
+    height: 50px;
+    margin: auto;
+    
+}
+#zcc {
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+/*.crop img {
+    width: 400px;
+    height: 300px;
+    margin: -75px 0 0 -100px;
+}*/
