--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,8 @@
           </video>
 
 				    <div class="col-md-12 text-center">
-    <h1><span>Rent unique places to stay from local hosts in 190+ countries.</span><br>Welcome <%=current_user.name if current_user != nil%></h1>
+    <h1 class="text-livethere">LIVE THERE</h1>
+		<h4 class="text-subhead">Book homes from local hosts in 191+ countries and experience a place like you live there.</h4>
 			<div <a class="btn btn-default btn-sm btn-min-block">
 			<%= link_to 'Listings', controller: 'listings' %>
 			</div>
@@ -95,6 +96,4 @@
 </div>
 <div id="push">
 </div>
-
-
-
+<br><br>
