--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -10,3 +10,46 @@
   .m { font-size: 1.2em; }
   .l { font-size: 1.8em; }
 }
+
+
+
+.cardbg{
+	top: 0;
+	align-content: center;  
+}
+
+.card{
+	width: 300px;
+}
+
+.cardlabel{
+	text-align: left;
+	padding-left: 10px;
+
+}
+
+.cardprice{
+	position: absolute;
+	top:130px;
+	background-color: rgba(45,45,45,0.9);
+	width: 50px;
+}
+
+.cardpricetext{
+
+	padding-left: -20px;
+	padding-right: 50px;
+}
+
+#navav{
+    
+    height: 50px;
+    margin: auto;
+    
+}
+#zcc {
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    border-radius: 50%;
+}
