--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,80 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.main-text
+{
+    position: absolute;
+    top: 200px;
+    width: 96.66666666666666%;
+    color: #FFF;
+}
+
+
+.video_container {
+ position: relative;
+ background:none;
+ -webkit-background-size: cover;
+ -moz-background-size: cover;
+ background-size: cover;
+ text-align: center;
+ color: #fff;
+ padding-top: 130px;
+ min-height: 500px;
+ letter-spacing: 2px;
+ font-family: "Montserrat", sans-serif;
+}
+.video_container h1 {
+ font-size: 50px;
+ line-height: 1.3;
+}
+.video_container h1 span {
+ font-size: 20px;
+ color: #e8f380 ;
+ border-bottom: 2px solid #e8f380 ;
+ padding-bottom: 12px;
+ line-height: 3;
+}
+
+.photo {
+	position: absolute;
+	object-fit: span;
+	z-index: -5;
+	top: 0px;
+	display: block;
+	margin-left: auto;
+    margin-right: auto;
+	width: span;
+}
+
+.text-livethere {
+	font-size: 60px;
+	font-weight: 700;
+	margin-top: 25px;
+	margin-bottom: 15px;
+	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.text-subhead {
+    margin-bottom: 24px;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+/*
+body {
+  padding-top: 60px;
+}
+@media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
+}
+*/
+/*.crop img {
+    width: 400px;
+    height: 300px;
+    margin: -75px 0 0 -100px;
+}*/
