--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,21 +1,21 @@
 <div class="video_container">
 
-          <video autoplay loop="loop" preload="auto" class="photo">
-             <source src="https://a0.muscache.com/airbnb/static/P1-background-vid-compressed.mp4" type='video/mp4'>
-               <source src="https://a0.muscache.com/airbnb/static/P1-background-vid-compressed.webm" type='video/webm'>
-          </video>
+	<video autoplay loop="loop" preload="auto" class="photo">
+		<source src="https://a0.muscache.com/airbnb/static/P1-background-vid-compressed.mp4" type='video/mp4'>
+			<source src="https://a0.muscache.com/airbnb/static/P1-background-vid-compressed.webm" type='video/webm'>
+	</video>
 
-				    <div class="col-md-12 text-center">
-    <h1 class="text-livethere">LIVE THERE</h1>
+	<div class="col-md-12 text-center">
+		<h1 class="text-livethere">LIVE THERE</h1>
 		<h4 class="text-subhead">Book homes from local hosts in 191+ countries and experience a place like you live there.</h4>
-			<div <a class="btn btn-default btn-sm btn-min-block">
+		<div class="btn btn-default btn-sm btn-min-block">
 			<%= link_to 'Listings', controller: 'listings' %>
-			</div>
-			<div <a class="btn btn-default btn-sm btn-min-block">
+		</div>
+		<div class="btn btn-default btn-sm btn-min-block">
 			<%= link_to 'New listing', new_listing_path %>
-			</div>
-
-    </div>
+		</div>
+		<%= link_to 'New listing', new_listing_path, class: "btn btn-default btn-sm btn-min-block" %>
+	</div>
 </div>
 
 
